# meowo

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  package.json
.cargo/: audit.toml
.github/workflows/: ci.yml  deploy-pages.yml  release.yml  site-redeploy.yml
app/: .gitignore  demo.html  embed-demo.html  index.html  package.json  vite.config.ts  vite.demo.config.ts
app/e2e/: README.md  run.mjs  tsconfig.json  wdio.capability.json  wdio.conf.ts
app/e2e/specs/: board-refresh.e2e.ts
app/scripts/: check-gif.mjs  gen-menubar-template.mjs  gen-nsis-images.mjs  record-demo.mjs  render-icon.mjs  shot-site.mjs  snap-frame.mjs
app/src/: App.loadMore.test.tsx  App.test.tsx  App.tsx  Dropdown.tsx  Tooltip.test.tsx  Tooltip.tsx  api.login.test.ts  api.newsession.test.ts  api.test.ts  api.ts  appearance.test.ts  appearance.ts  confirm.tsx  devtools-guard.ts  fonts.ts  input-modality.ts  main.tsx  platform.test.ts  platform.ts  providers.test.tsx  providers.tsx  styles.css  terminalAttention.test.ts  terminalAttention.ts  test-setup.ts  useAgents.ts  useShowWhenReady.ts  useUpdate.test.tsx  useUpdate.ts  vite-env.d.ts
app/src-tauri/: CLAUDE.md  Cargo.toml  Info.plist  build.rs  nsis-hooks.nsh  tauri.conf.json  tauri.macos.conf.json  windows-manifest.xml
app/src-tauri/capabilities/: default.json
app/src-tauri/crates/meowo-agent/src/: account.rs  caps.rs  chat_ui.rs  codec.rs  config.rs  install.rs  launch.rs  lib.rs  proxy.rs  registry.rs  relay.rs  transcript.rs  wiring.rs
app/src-tauri/crates/meowo-agent/src/plugins/claude/: account.rs  mod.rs  setup.rs  telemetry.rs  transcript.rs
app/src-tauri/crates/meowo-agent/src/plugins/codex/: account.rs  mod.rs  telemetry.rs
app/src-tauri/crates/meowo-agent/src/plugins/gemini/: account.rs  mod.rs  telemetry.rs
app/src-tauri/crates/meowo-agent/src/plugins/kimi/: account.rs  mod.rs  telemetry.rs
app/src-tauri/crates/meowo-agent/src/plugins/opencode/: mod.rs
app/src-tauri/crates/meowo-agent/tests/: subagent_live.rs  todo_live.rs
app/src-tauri/crates/meowo-protocol/: Cargo.toml
app/src-tauri/crates/meowo-protocol/src/: broker.rs  ipc.rs  lib.rs
app/src-tauri/crates/meowo-reporter/: Cargo.toml
app/src-tauri/crates/meowo-reporter/src/: attach.rs  dispatch.rs  hook.rs  lib.rs  main.rs  statusline.rs  tabtitle.rs
app/src-tauri/crates/meowo-reporter/tests/: dispatch_test.rs  import_test.rs  parse_test.rs  transcript_test.rs
app/src-tauri/crates/meowo-store/src/: migrations.rs  models.rs  query.rs  store.rs
app/src-tauri/crates/meowo-store/tests/: store_test.rs
app/src-tauri/icons/: icon.icns  menubar-template.rgba
app/src-tauri/src/: account.rs  app_bundle.rs  ccsetup.rs  chat.rs  confirm.rs  envpath.rs  fsutil.rs  install.rs  lib.rs  main.rs  managed_terminal.rs  ports.rs  proc.rs  proxy.rs  pty.rs  relay.rs  session_command.rs  session_query.rs  settings.rs  snap.rs  term_script.rs  terminal.rs  watch.rs  wezterm.rs  window.rs
app/src-tauri/src/account/: claude.rs  codex.rs  kimi.rs  mod.rs
app/src-tauri/src/macos/: menubar.rs  mod.rs  notify.rs  panel.rs  terminal.rs
app/src-tauri/src/profile/: mod.rs
app/src-tauri/src/setup/: claude.rs  codex.rs  kimi.rs  mod.rs
app/src-tauri/tests/: capture_ime_cursor.rs  capture_model_menu.rs  probe_enter.rs  proxy_apply.rs
app/src-tauri/tests/common/: mod.rs
app/src/chat/: reducer.test.ts  reducer.ts
app/src/demo/: DemoStage.tsx  cursor.ts  data.ts  demo.css  embed.tsx  main.tsx  mock.test.ts  mock.ts  script.ts  strings.ts  timeline.test.ts  timeline.ts
app/src/hooks/: useLoginOperations.test.tsx  useLoginOperations.ts  useTauriEvent.test.tsx  useTauriEvent.ts
app/src/i18n/: en.ts  i18n.test.ts  index.tsx  zh.ts
app/src/poster/: main.tsx  poster.css
app/src/test/: agents.ts
app/src/views/: About.account.test.tsx  About.tsx  ChatMarkdown.tsx  ChatSidebar.test.tsx  ChatSidebar.tsx  ChatWindow.test.tsx  ChatWindow.tsx  CollapsedStrip.test.tsx  CollapsedStrip.tsx  ConfirmWindow.tsx  LiveView.test.tsx  LiveView.tsx  Onboarding.tsx  (+13 more)
crates/cc-reporter/: Cargo.toml
crates/cc-store/: Cargo.toml
crates/meowo-agent/: Cargo.toml
crates/meowo-agent/src/: account.rs  auth.rs  caps.rs  chat_ui.rs  codec.rs  config.rs  fsutil.rs  id.rs  install.rs  launch.rs  launch_options.rs  lib.rs  ports.rs  profile.rs  proxy.rs  registry.rs  relay.rs  transcript.rs  variant.rs  wiring.rs
crates/meowo-agent/src/plugins/: claude.rs  codex.rs  kimi.rs  mod.rs
crates/meowo-agent/src/plugins/claude/: account.rs  install.rs  mod.rs  setup.rs  telemetry.rs  transcript.rs
crates/meowo-agent/src/plugins/codex/: account.rs  mod.rs  setup.rs  telemetry.rs
crates/meowo-agent/src/plugins/gemini/: account.rs  mod.rs
crates/meowo-agent/src/plugins/kimi/: account.rs  mod.rs  telemetry.rs
crates/meowo-agent/src/plugins/opencode/: account.rs  mod.rs
crates/meowo-agent/tests/: install_urls_live.rs  subagent_live.rs  todo_live.rs
crates/meowo-reporter/: Cargo.toml
crates/meowo-reporter/src/: agent.rs  attach.rs  claude.rs  codex.rs  dispatch.rs  hook.rs  import.rs  kimi.rs  lib.rs  main.rs  proc.rs  statusline.rs  tabtitle.rs  transcript.rs
crates/meowo-reporter/tests/: dispatch_test.rs  exit_code_test.rs  import_test.rs  parse_test.rs  transcript_test.rs
crates/meowo-store/: Cargo.toml
docs/: macos-acceptance-checklist.md  macos-release-secrets.md  release-notes-v0.1.3.md  release-notes-v0.1.4.md  release-notes-v0.2.0.md
docs/architecture/: agent-plugin.md  refactor-roadmap.md
docs/research/: tui-menu-captures-2026-07.md
scripts/: generate-nsis-bitmaps.py  install-hooks.mjs  prepare-sidecar.mjs  rename-to-meowo.py
site/: README.md  next.config.ts  package.json
site/app/: global-not-found.tsx  globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
site/components/: AccountCard.tsx  CheckItem.tsx  CtaBand.tsx  DemoFrame.tsx  DownloadButton.tsx  FeatureGrid.tsx  Footer.tsx  LangHint.tsx  Nav.tsx  ProductShowcase.tsx  Reveal.tsx  SupportedAgents.tsx  ThemeShowcase.tsx  icons.tsx
site/lib/: i18n.ts  release.ts  site.ts
site/public/: CNAME
(+146 files in other folders)
