[workspace]
members = ["crates/meowo-store", "crates/meowo-agent", "crates/meowo-protocol", "crates/meowo-reporter", "app/src-tauri"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.22"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
notify = "6"
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
