[package]
name = "cc-app"
version = "0.2.5"
edition = "2021"

[lib]
name = "cc_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
cc-store = { path = "../../crates/cc-store" }
cc-reporter = { path = "../../crates/cc-reporter" }
tauri = { workspace = true, features = ["tray-icon", "macos-private-api"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-window-state = { workspace = true }
tauri-plugin-autostart = { workspace = true }
tauri-plugin-updater = { workspace = true }
tauri-plugin-process = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
notify = { workspace = true }
sysinfo = "0.32"
# ureq 跨平台：account 模块无条件使用，放普通依赖让 workspace 在非 Windows 也能编译。
ureq = { version = "2", features = ["json"] }
# 系统语言检测（Settings.language = auto 时解析界面/通知语言）。
sys-locale = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_Graphics_Gdi", "Win32_Foundation", "Win32_System_Threading"] }
uiautomation = "0.25"
tauri-winrt-notification = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
mac-notification-sys = "0.6"

[lints.rust]
# tauri-nspanel 的 panel_delegate! 宏展开含 #[cfg(feature = "cargo-clippy")]，新 rustc 下触发
# unexpected_cfgs；该 cfg 来自上游宏、无法在调用处消除，整体放行（仅影响本 crate）。
unexpected_cfgs = "allow"
