[package]
name = "meowo-app"
version = "0.5.3"
edition = "2021"

[lib]
name = "meowo_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# E2E 测试专用：注入 WDIO 内嵌 WebDriver 服务器 + execute/mock/log 桥。仅 `--features e2e`
# 时编译进二进制；生产构建绝不包含（否则会把一个可远程驱动 app 的 WebDriver 端点 + 任意
# JS 执行/命令 mock 能力塞进发行版）。E2E 构建见 app/e2e/README.md。
e2e = ["dep:tauri-plugin-wdio", "dep:tauri-plugin-wdio-webdriver"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
meowo-agent = { path = "../../crates/meowo-agent" }
meowo-store = { path = "../../crates/meowo-store" }
meowo-reporter = { path = "../../crates/meowo-reporter" }
tauri = { workspace = true, features = ["tray-icon", "macos-private-api"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-window-state = { workspace = true }
tauri-plugin-autostart = { workspace = true }
tauri-plugin-updater = { workspace = true }
tauri-plugin-process = { workspace = true }
tauri-plugin-dialog = "2"
# E2E 专用插件（feature=e2e 才编译）：tauri-plugin-wdio 提供 execute/mock/日志转发，
# tauri-plugin-wdio-webdriver 提供内嵌 WebDriver 服务器（embedded provider）。见 [features].
tauri-plugin-wdio = { version = "1", optional = true }
tauri-plugin-wdio-webdriver = { version = "1", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
notify = { workspace = true }
sysinfo = "0.32"
percent-encoding = "2"
base64 = "0.22"
# ureq 只服务 ports.rs 的 HttpPort 实现——插件层只认 trait，不依赖 HTTP 栈。
# socks-proxy：SOCKS 支持在 ureq 是**编译期 feature**，不开的话 `socks5://` 代理能解析、
# 但连接时才失败。Clash / V2Ray 用户用 socks5 是常态，必须开。
ureq = { version = "2", features = ["json", "socks-proxy"] }
# 直下安装要校验二进制的 SHA-256（Phase 3 曾随 codex setup 迁走，现因 run_direct_install 复用）
sha2 = "0.10"
# 系统语言检测（Settings.language = auto 时解析界面/通知语言）。
sys-locale = "0.3"
# codex config.toml 的结构保持编辑（保注释与键序）。kimi 的已迁入 meowo-agent::config。
# codex hook 预信任的 trusted_hash 计算（SHA-256）。

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_Graphics_Gdi", "Win32_Foundation", "Win32_System_Threading", "Win32_System_Diagnostics_ToolHelp"] }
uiautomation = "0.25"
tauri-winrt-notification = "0.7"
# 修正 auto-launch 写 Run 项时路径不加引号的问题（含空格路径会失败）：enable 后重写为带引号路径。
winreg = "0.55"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
mac-notification-sys = "0.6"

[lints.rust]
# tauri-nspanel 的 panel_delegate! 宏展开含 #[cfg(feature = "cargo-clippy")]，新 rustc 下触发
# unexpected_cfgs；该 cfg 来自上游宏、无法在调用处消除，整体放行（仅影响本 crate）。
unexpected_cfgs = "allow"
