[package]
name = "meowo-reporter"
version = "0.1.0"
edition = "2021"

[dependencies]
meowo-store = { path = "../meowo-store" }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = "0.32"

# 仅 Windows：hook 时往本会话标签的 ConPTY 写 OSC 标题(CONOUT$ + WriteConsoleW)，见 tabtitle.rs。
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Console"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "meowo-reporter"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
